	  * Removed redundant extended address checking code from AICB_CMD_READ_FLASH_ISP handler in AVRISP mode
	  * USI word transmit and BUFF_GetBuffByte functions converterted to static inline for speed
	  * Removed unused SPI_TransmitWord function
	  * Added in ERASE NEEDED error for STORAGE MODE, which allowed for the use of the faster BUFFER_TO_FLASH without erase Dataflash command
	  
	IN PUBLIC RELEASE 2.0:
	=======================================
	  * OSCCAL is now calibrated before any function involving the USART
	  * Removed the now unnessesary manual and auto calibration settings menu items
	  * Removed unused USART_TxString function
	  * EEPROM handling changed over to the (now M169 compatible) AVRLibC routines
	  * USART Rx interrupt moved to RingBuff.c and changed to the contents of the ringbuffer store routine for size/speed
	  * Fixed a few more dataflash programming-related glitches
	  * Moved the timeout setup function code to the TIMEOUT_TIMER_ON() macro
	  * Timeout system now uses Timer2, freeing up Timer1 for auto sleep
	  * Function parameters changed to const (where possible) for robustness
	  * Dataflash busy checking moved to a seperate routine for speed
	  * Added auto-powerdown with user settable timeout
	  * Correct command timeout error is now returned via the packet state machine instead of a command error
	  * Dataflash routines now make local copies of the SPI send routine pointer to save codespace and time
	  * EEPROM erasing changed so that only the used memory locations are cleared to minimise wear
	  * Added a ARRAY_UPPERBOUND macro to provide automatic code adjustment to increased array sizes
	  * Fixed include files capitolisation so that ButtLoad can be compiled on Unix systems (thanks to Bernd Trog)
	  * Added extra ISR attributes for smaller codesize/deletion protection on GCC4.x (also thanks to Bernd Trog)
	  * Status LED now turns orange while a target sync is attempted